# ds-exp

./: .gitignore  CI_CD_GUIDE.md  CI_CD_RESULTS.md  Healithium_cleaned.csv.dvc  Healithium_raw_scraped_like.csv.dvc  README.md  Resposible_AI.md  create_disease_model.py  fix_code.sh  fix_dashboard.py  fix_production_issues.py  pyproject.toml  requirements.txt  ruff.toml  start_dashboard.sh  test_app.py  test_ci.sh  voltas_featured.csv.dvc
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py
app/artifacts/: disease_outbreak_dataset_1500.csv  expected_columns.json  reference_sample.csv  sample_dashboard_200.csv
dashboard/: app.py
notebooks/: DS_EXP_2.ipynb  DS_EXP_3.ipynb  DS_EXP_4.ipynb  DS_EXP_5.ipynb
tests/: test_api.py
