[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks
)/
'''

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"